Deleted a few things